--- a/css/index.css
+++ b/css/index.css
@@ -116,6 +116,9 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
+    max-width: 1500px;
+    margin: 0 auto;
+    width: 100%;
 }
 
 .a1 {
